crates/benitoite/src/syntax/parser/expr.rs
//! 式の解析（設計書 02-03「構文解析の方式」「構文の規則に伴う次の診断」「AST」「入れ子の深さ」、
//! 01-02「文法」の式の規則）。
//!
//! 演算子は、02-03 の演算子の表の左右の強さを使う Pratt 法（Pratt parsing）で読む（ADR 0020）。
//! 一つの繰り返し（`parse_bp`）が、中置の演算子と、後置の演算子として扱う呼び出し `(...)` を読む。
//! 前置の `-` と `!` は、右の強さ 70 でオペランドを読む。
//!
//! パイプ、プレースホルダを含む呼び出し、括弧の式、`else if` の連なりは、書かれた形のまま AST に残す
//! （02-03「AST」）。展開は型検査器と脱糖の段が行う。
//!
//! 入れ子の深さ: 左結合の演算子の連なりと呼び出しの連なりは繰り返しで読むが、できる木は左に深くなる
//! （02-03「入れ子の深さ」）。演算子を一つ重ねるたびに、それまでに作った木のノードがすべて 1 段深くなる。
//! そこで、木の中で最も深いノードの深さ（`height`）を持ち歩き、演算子と呼び出しを一つ作るたびに
//! 上限を確かめる。オペランドの中の深さは、`Parser::enter` が記録する最大の深さ（`Parser::deepest`）で測る。
//! 作った演算子の数だけを足すと、最初のオペランドの中の入れ子の深さと、その後に重ねた演算子の数とが
//! 足し合わされず、実際の木の深さが上限を超えても見逃すからである（`((a + b) + c) + d` の形を
//! 何段も重ねると、どの繰り返しの演算子の数も小さいまま、木はいくらでも深くなる）。
//!
//! スタックの使い方（`parser` の「スタックの使い方」）: 再帰の経路にある関数は、式を `Box<Expr>` で
//! 受け渡し、大きなノードの組み立てを別の関数（`finish_*`）に分ける。`Result` に `?` を使わず
//! `let ... else` で書くのも、最適化しないビルドで一時の値を減らすためである。

use super::pattern::{self, PatternCounter};
use super::text;
use super::{
    CommaList, Fail, PResult, Parser, child, comma_list, line_list, literal_of, name_of, stmt,
    types,
};
use crate::base::Span;
use crate::diag::{DiagBuilder, DiagCode};
use crate::syntax::ast::{
    Arg, BinOp, BinaryExpr, Block, CallExpr, ElseBranch, Expr, IfExpr, LambdaExpr, ListExpr,
    LitExpr, MatchArm, MatchExpr, NameExpr, Param, ParenExpr, Pattern, PipeExpr, PlaceholderArg,
    TypeExpr, UnOp, UnaryExpr, UnitExpr, UsesList,
};
use crate::syntax::token::TokenKind;

// ---------------- 演算子の表（02-03「構文解析の方式」） ----------------

/// 中置の演算子の種類。`|>` は二項演算ではなくパイプのノードにする（02-03「AST」）。
#[derive(Clone, Copy, Debug)]
enum Infix {
    Bin(BinOp),
    Pipe,
}

/// 中置の演算子の表。字句、演算子、左の強さ、右の強さ。数が大きいほど強く結合する。
/// 右の強さを左の強さより 1 大きくして、左結合にする。比較演算子は結合しないが、表の上では
/// 左結合と同じ強さにし、連なりを `check_chained_comparison` で診断する。
const INFIX_OPS: &[(TokenKind, Infix, u8, u8)] = &[
    (TokenKind::PipeGt, Infix::Pipe, 10, 11),
    (TokenKind::OrOr, Infix::Bin(BinOp::Or), 20, 21),
    (TokenKind::AndAnd, Infix::Bin(BinOp::And), 30, 31),
    (TokenKind::EqEq, Infix::Bin(BinOp::Eq), 40, 41),
    (TokenKind::BangEq, Infix::Bin(BinOp::Ne), 40, 41),
    (TokenKind::Lt, Infix::Bin(BinOp::Lt), 40, 41),
    (TokenKind::Le, Infix::Bin(BinOp::Le), 40, 41),
    (TokenKind::Gt, Infix::Bin(BinOp::Gt), 40, 41),
    (TokenKind::Ge, Infix::Bin(BinOp::Ge), 40, 41),
    (TokenKind::Plus, Infix::Bin(BinOp::Add), 50, 51),
    (TokenKind::Minus, Infix::Bin(BinOp::Sub), 50, 51),
    (TokenKind::Star, Infix::Bin(BinOp::Mul), 60, 61),
    (TokenKind::Slash, Infix::Bin(BinOp::Div), 60, 61),
    (TokenKind::Percent, Infix::Bin(BinOp::Rem), 60, 61),
];

/// 前置の `-` と `!` の右の強さ。
const PREFIX_BP: u8 = 70;

/// 後置の演算子（呼び出し）の左の強さ。値に続けたドットの検出も、同じ強さの後置の位置で行う。
const CALL_BP: u8 = 80;

fn infix_of(kind: TokenKind) -> Option<(Infix, u8, u8)> {
    INFIX_OPS
        .iter()
        .find(|(k, _, _, _)| *k == kind)
        .map(|(_, infix, lbp, rbp)| (*infix, *lbp, *rbp))
}

fn is_comparison_op(op: BinOp) -> bool {
    matches!(
        op,
        BinOp::Eq | BinOp::Ne | BinOp::Lt | BinOp::Le | BinOp::Gt | BinOp::Ge
    )
}

// ---------------- 入口 ----------------

/// 式を一つ読む。`depth` は式のノードの深さである。
///
/// 構文エラーのときは、報告して誤りの式を返す（回復は文などの並びの解析に任せる）。
/// 打ち切ったときも誤りの式を返すので、呼び出し側は `Parser::aborted` を確かめる。
///
/// 一次式だけからなる式（ブロックの文に書いたブロックなど）は、演算子の繰り返し（`continue_bp`）を
/// 通さずに返す。ブロックの入れ子の再帰の経路から繰り返しの関数の枠を除き、スタックを節約するためである
/// （`parser` の「スタックの使い方」）。
pub(super) fn parse_expr(p: &mut Parser, depth: u32) -> Expr {
    let outer = p.deepest;
    p.deepest = 0;
    let start = p.pos;
    let Ok(lhs) = parse_primary(p, depth) else {
        p.deepest = outer;
        return error_expr(p, start);
    };
    if next_step(p, 0).is_none() {
        p.deepest = p.deepest.max(depth).max(outer);
        return unbox(lhs);
    }
    let Ok(expr) = continue_bp(p, depth, 0, start, outer, lhs) else {
        return error_expr(p, start);
    };
    unbox(expr)
}

// 次の関数は、式の値を呼び出し元の枠に直接作るためのものである（`parser` の「スタックの使い方」）。
fn unbox(expr: Box<Expr>) -> Expr {
    *expr
}

fn error_expr(p: &mut Parser, start: usize) -> Expr {
    Expr::Error(p.error_node_from(start))
}

/// 期待どおりの字句を一つ読み、その位置を返す。字句の値を再帰の経路の関数の枠に置かないために分ける。
fn bump_span(p: &mut Parser) -> Span {
    p.bump().span
}

/// 次の字句が `kind` なら読み進める。そうでなければ E0201 を報告して失敗する。
fn expect_kind(p: &mut Parser, kind: TokenKind) -> PResult<()> {
    p.expect(kind).map(|_| ())
}

// ---------------- Pratt 法 ----------------

/// 繰り返しの一歩で読む後置・中置の演算子。
#[derive(Clone, Copy, Debug)]
enum Step {
    /// 呼び出し `(...)`
    Call,
    /// 値に続けたドット（E0203）
    Dot,
    /// 中置の演算子と右の強さ
    Infix(Infix, u8),
}

/// 今の字句が、強さ `min_bp` の繰り返しで読む演算子なら、その一歩を返す。
fn next_step(p: &Parser, min_bp: u8) -> Option<Step> {
    let kind = p.peek_kind();
    if kind == TokenKind::LParen {
        return (CALL_BP >= min_bp).then_some(Step::Call);
    }
    if kind == TokenKind::Dot {
        return (CALL_BP >= min_bp).then_some(Step::Dot);
    }
    let (infix, lbp, rbp) = infix_of(kind)?;
    (lbp >= min_bp).then_some(Step::Infix(infix, rbp))
}

/// 左の強さが `min_bp` 以上の演算子を読む間、式を読む。`depth` は、でき上がる式の根のノードの深さである。
///
/// 読み始めのオペランドは深さ `depth` として読み、演算子や呼び出しを重ねるたびに、木の中で最も深い
/// ノードの深さ `height` を 1 増やして上限を確かめる（モジュールの先頭の「入れ子の深さ」）。
/// 終わるときに、呼び出し元が測っている最大の深さ（`Parser::deepest`）に `height` を合わせる。
fn parse_bp(p: &mut Parser, depth: u32, min_bp: u8) -> PResult<Box<Expr>> {
    let outer = p.deepest;
    p.deepest = 0;
    let start = p.pos;
    let Ok(lhs) = parse_primary(p, depth) else {
        p.deepest = outer;
        return Err(Fail);
    };
    continue_bp(p, depth, min_bp, start, outer, lhs)
}

/// `parse_bp` の、読み始めのオペランド `lhs` を読んだ後の繰り返し。`start` は `lhs` の始まりの字句の位置、
/// `outer` は呼び出し元が測っていた最大の深さ。`Parser::deepest` は `lhs` の中の最大の深さを持っている。
fn continue_bp(
    p: &mut Parser,
    depth: u32,
    min_bp: u8,
    start: usize,
    outer: u32,
    mut lhs: Box<Expr>,
) -> PResult<Box<Expr>> {
    let mut height = p.deepest.max(depth);
    while let Some(step) = next_step(p, min_bp) {
        p.deepest = 0;
        let Ok(next) = apply_step(p, start, depth, step, lhs) else {
            p.deepest = outer;
            return Err(Fail);
        };
        lhs = next;
        let Some(next_height) = after_step(p, step, height) else {
            p.deepest = outer;
            return Err(Fail);
        };
        height = next_height;
    }
    p.deepest = height.max(outer);
    Ok(lhs)
}

/// 演算子か呼び出しを一つ重ねた後の処理。重ねた後の木の中で最も深いノードの深さを返し、
/// 上限を超えたら `None` を返す。
fn after_step(p: &mut Parser, step: Step, height: u32) -> Option<u32> {
    match step {
        // 木の形は変わらない。
        Step::Dot => Some(height.max(p.deepest)),
        Step::Call | Step::Infix(..) => {
            // 重ねる前の木は 1 段深くなる。新しいオペランド（引数）の深さは、根を `depth` として測ってある。
            let height = child(height).max(p.deepest);
            p.enter(height).ok()?;
            if let Step::Infix(Infix::Bin(op), _) = step {
                check_chained_comparison(p, op);
            }
            Some(height)
        }
    }
}

/// 演算子か呼び出しを一つ読み、`lhs` に重ねた式を返す。`start` は `lhs` の始まりの字句の位置。
fn apply_step(
    p: &mut Parser,
    start: usize,
    depth: u32,
    step: Step,
    lhs: Box<Expr>,
) -> PResult<Box<Expr>> {
    match step {
        Step::Call => apply_call(p, start, depth, lhs),
        Step::Infix(infix, rbp) => apply_infix(p, start, depth, infix, rbp, lhs),
        Step::Dot => Ok(skip_dot(p, start, lhs)),
    }
}

fn apply_call(p: &mut Parser, start: usize, depth: u32, callee: Box<Expr>) -> PResult<Box<Expr>> {
    let Ok(args) = parse_args(p, depth) else {
        return Err(Fail);
    };
    Ok(finish_call(p, start, callee, args))
}

fn apply_infix(
    p: &mut Parser,
    start: usize,
    depth: u32,
    infix: Infix,
    rbp: u8,
    lhs: Box<Expr>,
) -> PResult<Box<Expr>> {
    let op_span = bump_span(p);
    let Ok(rhs) = parse_bp(p, child(depth), rbp) else {
        return Err(Fail);
    };
    Ok(finish_infix(p, start, infix, op_span, lhs, rhs))
}

fn finish_call(p: &mut Parser, start: usize, callee: Box<Expr>, args: Vec<Arg>) -> Box<Expr> {
    Box::new(Expr::Call(CallExpr {
        id: p.node_id(),
        span: p.span_from(start),
        callee,
        args,
    }))
}

fn finish_infix(
    p: &mut Parser,
    start: usize,
    infix: Infix,
    op_span: Span,
    lhs: Box<Expr>,
    rhs: Box<Expr>,
) -> Box<Expr> {
    let id = p.node_id();
    let span = p.span_from(start);
    Box::new(match infix {
        Infix::Bin(op) => Expr::Binary(BinaryExpr {
            id,
            span,
            op,
            op_span,
            lhs,
            rhs,
        }),
        Infix::Pipe => Expr::Pipe(PipeExpr { id, span, lhs, rhs }),
    })
}

/// 比較の右のオペランドを読んだ直後に、また比較演算子が来たら、その演算子の位置に E0202 を報告する
/// （02-03「構文解析の方式」）。回復として、呼び出し元は左結合として読み続ける（実装プラン T12 の決定）。
fn check_chained_comparison(p: &mut Parser, op: BinOp) {
    if !is_comparison_op(op) {
        return;
    }
    let next_is_comparison = matches!(
        infix_of(p.peek_kind()),
        Some((Infix::Bin(next), _, _)) if is_comparison_op(next)
    );
    if !next_is_comparison {
        return;
    }
    let diagnostic = DiagBuilder::new(DiagCode::E0202)
        .primary(p.peek().span)
        .help("and")
        .build();
    p.report(diagnostic);
}

/// 値に続けたドット（`xs.map(f)`、`s.length`）を E0203 で報告し、`.` とその後の識別子を読み飛ばす
/// （01-02「ドット記法」）。主な位置は `.` から名前の終わりまでである。
///
/// 読み飛ばした範囲は誤りのノードで表す（02-03「誤りからの回復」）。AST には値とドットの後の名前を
/// 並べて置く場所がないので、値 `lhs` とドットと名前をまとめて一つの誤りの式に置き換える
/// （`start` は `lhs` の始まりの字句の位置）。続く `(...)` は、呼び出し元の繰り返しがこの誤りの式の
/// 呼び出しとして読む（`xs.map(f)` は `Call(Error(xs.map), f)` になる）。
fn skip_dot(p: &mut Parser, start: usize, lhs: Box<Expr>) -> Box<Expr> {
    drop(lhs);
    let dot = p.peek().span;
    // 期待どおりの字句ではないので、報告の抑制を解かずに読む。
    p.advance();
    let span = if matches!(p.peek_kind(), TokenKind::LowerIdent | TokenKind::UpperIdent) {
        let name = p.advance().span;
        dot.to(name)
    } else {
        dot
    };
    let diagnostic = DiagBuilder::new(DiagCode::E0203)
        .primary(span)
        .help("pipe")
        .build();
    p.report(diagnostic);
    Box::new(Expr::Error(p.error_node_from(start)))
}

// ---------------- 呼び出しの引数 ----------------

/// `"(" CommaList(Arg) ")"`。i 番目の引数は、呼び出しの深さに `i + 1` を加えた深さで解析する
/// （02-03「入れ子の深さ」）。
fn parse_args(p: &mut Parser, depth: u32) -> PResult<Vec<Arg>> {
    let _: Span = bump_span(p);
    comma_list(
        p,
        depth,
        CommaList {
            close: TokenKind::RParen,
            element: text::EXPRESSION,
            separator: text::COMMA_OR_RPAREN,
            allow_empty: true,
            indexed: true,
        },
        parse_arg,
        |out, node| out.push(Arg::Expr(Expr::Error(node))),
    )
}

/// `Arg = Expr | "_"`。呼び出しの直接の引数に書いた `_` だけがプレースホルダである
/// （01-02「部分適用のプレースホルダ」）。`_ + 1` のように `_` の後に式が続けば式として読み、
/// その `_` は一次式の位置の `_` として E0204 になる。読んだ引数を `out` に加える。
fn parse_arg(p: &mut Parser, depth: u32, out: &mut Vec<Arg>) -> PResult<()> {
    if p.at(TokenKind::Underscore)
        && matches!(p.peek_nth_kind(1), TokenKind::Comma | TokenKind::RParen)
    {
        if p.enter(depth).is_err() {
            return Err(Fail);
        }
        push_placeholder(p, out);
        return Ok(());
    }
    let Ok(expr) = parse_bp(p, depth, 0) else {
        return Err(Fail);
    };
    push_arg(out, expr);
    Ok(())
}

fn push_arg(out: &mut Vec<Arg>, expr: Box<Expr>) {
    out.push(Arg::Expr(*expr));
}

fn push_placeholder(p: &mut Parser, out: &mut Vec<Arg>) {
    let span = bump_span(p);
    out.push(Arg::Placeholder(PlaceholderArg {
        id: p.node_id(),
        span,
    }));
}

// ---------------- 一次式と前置の演算子 ----------------

/// 01-02 の `Primary` と、前置の演算子の付いた式。深さ `depth` のノードを作る。
fn parse_primary(p: &mut Parser, depth: u32) -> PResult<Box<Expr>> {
    if p.enter(depth).is_err() {
        return Err(Fail);
    }
    let kind = p.peek_kind();
    if kind == TokenKind::Minus || kind == TokenKind::Bang {
        parse_unary(p, depth)
    } else if kind == TokenKind::LParen && p.peek_nth_kind(1) != TokenKind::RParen {
        parse_paren(p, depth)
    } else if kind == TokenKind::LBracket {
        parse_list(p, depth)
    } else if kind == TokenKind::LBrace {
        parse_block_expr(p, depth)
    } else if kind == TokenKind::KwIf {
        parse_if_expr(p, depth)
    } else if kind == TokenKind::KwMatch {
        parse_match(p, depth)
    } else if kind == TokenKind::KwFn {
        parse_lambda(p, depth)
    } else {
        parse_leaf(p)
    }
}
